# ContextOfTheCode

./: .env  .gitignore  DOCUMENTATION.md  README.md  Spec  To-do list.md  claude-to-do-list  dump.rdb  pyproject.toml  requirements.txt  restart_server.sh  run_all.py  test_integration.py  test_upload_queue_integration.py  uploadqueue.py
collectors/: LocalCollector.py  TransportCollector.py  WikipediaCollector.py  __init__.py  base_data_collector.py  local_collector.py  mobile_app_collector.py  transport_collector.py  wikipedia_collector.py
config/: config.toml  data_model.json
dash_frontend/: app.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx
pythonanywhere_api/: README.md  app.py  db.py  requirements.txt
react_frontend/: package-lock.json  package.json
react_frontend/public/: config.toml  index.html  manifest.json
react_frontend/src/: App.tsx  ConfigContext.ts  MetricsSection.tsx  MobileSection.tsx  TransportMap.tsx
review/: collectors_review.md  frontend_review.md  server_review.md  upload_queue_review.md
server/: app.py  database.py  models.py  reset_db.py  wsgi.py
sharedUtils/config/: __init__.py  config.toml  data_model.json  loader.py  models.py
sharedUtils/logger/: logger.py
sharedUtils/testing/: test_batch_upload.py  test_failed_queue_recovery.py  test_integration.py  test_transport_collector.py  test_upload_queue_integration.py
sharedUtils/upload_queue/: __init__.py  base_queue.py  manager.py  redis_queue.py  simple_queue.py
(+2 files in other folders)
