[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-of-the-code"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "flask>=3.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["collectors*", "server*", "sharedUtils*"]
